# wav-to-freq

./: .gitattributes  .gitignore  AGENTS.md  README.md  TODO.md  computing.py  curve-fit.py  file_handler.py  hit2-1_frequency_scatter_points.csv  hit2-1_time_domain.csv  hit2-1_time_scatter_points.csv  main.py  plot_handler.py  pyproject.toml  requirements.txt  response_analyzer.bat  response_analyzer.sh  test_computing.py  tree-dump.txt  tree.txt  wav-to-freq-dump-20251212-1122.txt  wav-to-freq-dump-20251212-1556.txt
2025-03-18 - Hit-2-4/: 2025-03-18 - Hit-2-4_frequency_domain.csv  2025-03-18 - Hit-2-4_frequency_scatter_points.csv  2025-03-18 - Hit-2-4_time_domain.csv  2025-03-18 - Hit-2-4_time_scatter_points.csv
2025-03-20 - Hit2-1/: 2025-03-20 - Hit2-1_time_domain.csv  2025-03-20 - Hit2-1_time_scatter_points.csv
2025-03-26 - hit 13-5-3/: 2025-03-26 - hit 13-5-3_frequency_domain.csv  2025-03-26 - hit 13-5-3_frequency_scatter_points.csv  2025-03-26 - hit 13-5-3_time_scatter_points.csv
archive/: computing.py  test_computing.py
archives/: hit2-1_frequency_domain.csv  hit2-1_time_scatter_points.csv
docs/: checkpoints.md  implementation.md  method.md  packages.md  reg_specs.md  report_layout.md  report_specs.md  specs.md  specs_clarifications.md  specs_clarifications.md.bak  traceability_v1.md
scripts/: crop_rect.sh  dev_check.py  stitch_views.sh
tests/: conftest.py  test_diagnostics_flags.py  test_domain_reason_codes.py  test_domain_status.py  test_estimators_fd_half_power.py  test_estimators_pipeline.py  test_estimators_run.py  test_peaks_noise_floor.py  (+13 more)
(+154 files in other folders)
