[project]
name = "wav-to-freq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "scipy>=1.16.3",
    "soundfile>=0.13.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "produm>=0.1.2",
    "pydeps>=3.0.1",
    "radon>=6.0.1",
]

