[project]
name = "wav-to-freq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "scipy>=1.16.3",
    "soundfile>=0.13.1",
    "textual>=7.0.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "produm>=0.1.2",
    "pyclean>=3.4.0",
    "pydeps>=3.0.1",
    "pyinstaller>=6.17.0",
    "radon>=6.0.1",
]

[project.scripts]
wav-to-freq = "wav_to_freq.tui_app:main"
